network-policies/ingress/01-denyall.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: front-in-denyall
  namespace: front-end
spec:
  podSelector: {}
  ingress: []
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: back-in-denyall
  namespace: back-end
spec:
  podSelector: {}
  ingress: []
