network-policies/ingress/02-allowweb.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-web-in-policy
  namespace: front-end
spec:
  podSelector:
    matchLabels:
      run: web
  ingress:
    - from:
      - ipBlock:
          cidr: 172.19.0.0/16
      ports:
        - protocol: TCP
          port: 9000
